# kaji

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.ja.md  README.md  bugfix_agent_orchestrator.py  config.toml  llms.txt  pyproject.toml  test_bugfix_agent_orchestrator.py
.github/: labels.yml  release-please-config.json
.kaji/: config.toml
.serena/: project.yml
bugfix_agent/: agent_context.py  cli.py  config.py  context.py  run_logger.py  verdict.py
dao_harness/: __init__.py  adapters.py  cli.py  cli_main.py  errors.py  logger.py  models.py  prompt.py  runner.py  skill.py  state.py  verdict.py  workflow.py
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  README.md  architecture.md
kaji_harness/: __init__.py  adapters.py  artifacts.py  baseline.py  cli.py  cli_main.py  config.py  console_log.py  epic.py  errors.py  fsio.py  interactive_terminal.py  local_init.py  logger.py  models.py  postmerge.py  preflight.py  prompt.py  pytest_baseline_plugin.py  result.py  runner.py  script_exec.py  skill.py  starter_release.py  state.py  sync.py  verdict.py  workflow.py  worktree_discovery.py
legacy/: config.toml
prompts/: detail_design.md  implement.md  implement_review.md  pr_create.md  qa.md  qa_review.md
scripts/: check_doc_links.py  inventory_cli_main_patch_targets.sh  migrate_comment_filenames_and_machine.py  verify-packaging.sh
src/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_adapters.py  test_artifacts.py  test_artifacts_dir.py  test_baseline.py  test_bugfix_agent_config.py  (+168 more)
(+874 files in other folders)
